<resources>
    <string name="app_name">QuizApp</string>

    <string name="btn_true_text">True</string>
    <string name="btn_false_text">False</string>
    <string name="btn_prev_text">Prev</string>
    <string name="btn_next_text">Next</string>
    <string name="btn_cheat_text">Cheat!</string>

    <string name="question_australia">1. Canberra is the capital of Australia.</string>
    <string name="question_oceans">2. The Pacific Ocean is larger then the Atlantic Ocean.</string>
    <string name="question_mideast">3. The Suez Canel connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">4. The source of the Nile River is in Egypt.</string>
    <string name="question_americas">5. The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">6. Lake Baikal is the world\'s oldest and deepest freashwater lake.</string>

    <string name="show_answer_warning_text">Are you sure you want to show answer?</string>
    <string name="show_answer_button_text">Show Answer?</string>
</resources>